force-app/main/default/objects/HSE_Observation__c/HSE_Observation__c.object-meta.xml
<CustomObject>
    <label>HSE Observation</label>
    <nameField>
        <label>HSE Observation</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>HSE Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>