force-app/main/default/objects/HSE_Observation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HSE Observations</relationshipLabel>
    <relationshipName>HSE_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>