force-app/main/default/objects/HSE_Observation__c/fields/Corrective_Action_Taken__c.field-meta.xml
<CustomField>
    <fullName>Corrective_Action_Taken__c</fullName>
    <label>Corrective Action Taken</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>