force-app/main/default/objects/HSE_Observation__c/fields/Observation_Type__c.field-meta.xml
<CustomField>
    <fullName>Observation_Type__c</fullName>
    <label>Observation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Safe</fullName>
            </value>
            <value>
                <fullName>Unsafe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>