force-app/main/default/objects/HSE_Observation__c/fields/Observer__c.field-meta.xml
<CustomField>
    <fullName>Observer__c</fullName>
    <label>Observer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>