force-app/main/default/objects/HSE_Observation__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>HSE Observations</relationshipLabel>
    <relationshipName>HSE_Observations</relationshipName>
    <type>Lookup</type>
</CustomField>